[gd_scene load_steps=5 format=2]

[ext_resource path="res://CoolLine_Max11/script/scoreMenu.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/img/gui_score_menu.jpg" type="Texture" id=2]
[ext_resource path="res://CoolLine_Max11/font/CarterOne.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.494118, 0.313726, 0.0313726, 1 )
use_mipmaps = true
extra_spacing_top = 2
extra_spacing_bottom = 5
font_data = ExtResource( 3 )

[node name="scoreMenu" type="Node"]
script = ExtResource( 1 )

[node name="scoreMenu_panel" type="TextureRect" parent="."]
margin_right = 504.0
margin_bottom = 895.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="scoreDetailPanel" type="TextureRect" parent="scoreMenu_panel"]
margin_left = 41.0
margin_top = 174.0
margin_right = 463.0
margin_bottom = 703.0
__meta__ = {
"_edit_lock_": true
}

[node name="scoreDetail" type="RichTextLabel" parent="scoreMenu_panel/scoreDetailPanel"]
margin_left = 19.0
margin_top = 25.0
margin_right = 407.0
margin_bottom = 493.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="backButton" type="TextureButton" parent="scoreMenu_panel"]
margin_left = 437.0
margin_top = 124.0
margin_right = 497.0
margin_bottom = 187.0
__meta__ = {
"_edit_lock_": true
}
